--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,22 @@
     background: linear-gradient(to right, #2C5364, #203A43, #0F2027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
 }
-.lo{
+.post{
+  color: #6dd5ed;
+}
+.delacc{
+  border: 2px solid white;
+  width:400px;
+  height:100px;
+  border-radius: 10px;
+  background-color: rgb(41, 40, 40, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
   
+}
+.addBox{
+  box-shadow: 10px 10px 5px black;
 }
 .Homepage{
   box-shadow: 5px 10px #888888;
@@ -97,10 +111,18 @@
   color: #6dd5ed;
 }
 
+.card {
+  position: relative;
+  transition: all .8s ease-in-out;
+}
+
+.card:hover {
+  transform: translateY(-70px);
+}
 
 
 .key {
-  font-size: 100px;
+  font-size: 80px;
   display: inline-block;
   letter-spacing: 30px;
   transition: transform 0.2s;
