--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,15 @@
     background: linear-gradient(to right, #2C5364, #203A43, #0F2027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
 }
+.categcont{
+  display: flex;
+  flex-direction: row;
+  margin: auto;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  color: white;
+}
 .post{
   color: #6dd5ed;
 }
@@ -24,6 +33,9 @@
 }
 .addBox{
   box-shadow: 10px 10px 5px black;
+}
+.postCard{
+  background-color: rgb(41, 40, 40, 0.8);
 }
 .Homepage{
   box-shadow: 5px 10px #888888;
@@ -92,6 +104,14 @@
     padding: 16px 44px;
     min-width: 150px;
   }
+}
+.posts{
+  display: flex;
+  flex-direction: row;
+  margin: auto;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
 }
 .belep{
   border-radius: 10px;
